fixing gulp file.

--- a/styles/styles.less
+++ b/styles/styles.less
@@ -1,6 +1,6 @@
 @import "bootstrap/content/bootstrap.min.less";
 @import "bootstrap/content/bootstrap-theme.min.less";
-
+/*
 @import "buttons.less";
 @import "themes/desert.less";
 @import "global.less";
@@ -17,3 +17,4 @@
 @import "directives/dateInput.less";
 
 @import "dialogs.less";
+*/
