--- a/styles/styles.less
+++ b/styles/styles.less
@@ -1,5 +1,8 @@
 @import "bootstrap/content/bootstrap.min.less";
 @import "bootstrap/content/bootstrap-theme.min.less";
+
+@import "directives/user-info.less";
+
 /*
 @import "buttons.less";
 @import "themes/desert.less";
