--- a/styles/directives/user-info.less
+++ b/styles/directives/user-info.less
@@ -1,13 +1,25 @@
 .user-info {
+  td:first-child {
+    background-color: LightGrey;
+    div.checkbox {
+      padding: 0;
+      margin: 0;
+    }
+  }
+  margin-bottom: 16px;
+  td {
+    padding: 2px 4px;
+  }
   .name {
-    color: Navy
+    color: SteelBlue
   }
   .email {
-    color: green
+    color: Grey;
+    font-size: 12px;
   }
   .avatar {
-    width: 46px;
+    background: url('./inputs/sprite.png') no-repeat -300px -55px;
+    width: 44px;
     height: 44px;
-    background: url('/inputs/sprite.png') 0 0;
   }
 }
