--- a/styles/styles.less
+++ b/styles/styles.less
@@ -3,21 +3,4 @@
 
 @import "directives/user-info.less";
 
-/*
-@import "buttons.less";
-@import "themes/desert.less";
-@import "global.less";
-@import "header.less";
-@import "home.less";
-@import "reports.less";
-@import "tabs.less";
-@import "billBoard.less";
-
-@import "directives/navMenu.less";
-@import "directives/dbPager.less";
-@import "directives/checkBtn.less";
-@import "directives/searchPanel.less";
-@import "directives/dateInput.less";
-
-@import "dialogs.less";
-*/
+@import "user-list.less";
