--- a/views/user-info.html
+++ b/views/user-info.html
@@ -2,8 +2,12 @@
     <table>
         <tr>
             <td>
-                <div class="avatar"></div>
-            </td>
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox">
+                        <div class="avatar"></div>
+                    </label>
+                </div>
             <td>
                 <span class="name">
                     {{name}}
@@ -15,7 +19,4 @@
             </td>
         </tr>
     </table>
-    User Name
-    <br>
-    name: {{name}}
 </div>
