--- a/styles/directives/user-info.less
+++ b/styles/directives/user-info.less
@@ -1,6 +1,6 @@
-.user-info {
-  td:first-child {
+.user-info { td:first-child {
     background-color: LightGrey;
+  border-radius: 4px;
     div.checkbox {
       padding: 0;
       margin: 0;
