--- a/views/user-info.html
+++ b/views/user-info.html
@@ -4,7 +4,7 @@
             <td>
                 <div class="checkbox">
                     <label>
-                        <input type="checkbox">
+                        <input type="checkbox" ng-model="checked">
                         <div class="avatar"></div>
                     </label>
                 </div>
